NJ - created home page with nav and search bar

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="search-box-container container" id="login">
+    <div class="search-box-title-l">UMBuys Market</div>
+    <div class="search-bar-position">
+      <div class="input-group col-md-12">
+        <input type="text" class="form-control input-lg" placeholder="Find second-hand goods" />
+        <span class="input-group-btn">
+            <button class="btn btn-info btn-lg" type="button">
+                <i class="glyphicon glyphicon-search"></i>
+            </button>
+          </span>
+      </div>
+  </div>
+  <a class="search-box-title-m">Post new item</a>
+</div>
