--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+
+.search-box-container{
+  margin-top: 120px;
+  max-width: 600px;
+  height: 320px;
+  border: 1px solid #9C9C9C;
+  background-color: #EAEAEA;
+}
+
+#login .container{
+  margin-top: -85px;
+}
+
+.search-box-title-l{
+  font-weight: bold;
+  font-size: 200%;
+  text-align:center;
+  padding:10px;
+}
+.search-box-title-m{
+  font-weight: bold;
+  font-size: 140%;
+  text-align:center;
+  padding:10px;
+}
+.search-bar-position{
+  margin-top:50px;
+}
